gcc/testsuite/g++.dg/lookup/missing-std-include-9.C
std::byte b;		 // { dg-error "byte" }
// { dg-message "cstddef" "" { target c++17 } .-1 }
// { dg-message "C..17" "" { target c++14_down } .-2 }
